assets/css/styles.css
body {
    min-height: 100vh;
    margin: 0;
    padding: 0;
    font-family: Arial, sans-serif;
    background-color: #f4f4f4;
    color: #333;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
}

header {
    background: #333;
    color: white;
    padding: 15px;
    text-align: center;
}

nav ul {
    list-style: none;
    padding: 0;
}

nav ul li {
    display: inline;
    margin: 0 15px;
}

nav ul li a {
    text-decoration: none;
    color: white;
    font-size: 18px;
    padding: 10px 15px;
    border-radius: 5px;
    transition: background-color 0.3s ease-in-out;
}

nav ul li a:hover {
    background-color: rgba(255, 255, 255, 0.2);
}

h2 {
    text-align: center;
}

footer {
    text-align: center;
    padding: 15px;
    background: #222;
    color: white;
    margin-top: auto;
}
.warning-modal {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.5);
    justify-content: center;
    align-items: center;
    z-index: 1000;
}
.warning-modal .modal-content {
    background: #fff;
    padding: 20px;
    border-radius: 5px;
    text-align: center;
}
.warning-modal h3 {
    margin-top: 0;
    margin-bottom: 10px;
}
.warning-modal button {
    margin-top: 10px;
}

